--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.App-header,
+.App-footer {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+img {
+  width: 60%;
+  border-radius: 6px;
+}
+.place {
+  margin: 20px 0;
+  padding: 20px;
+  width: 100%;
+  background: whitesmoke;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  text-decoration: none;
+  color: gray;
+}
+a:visited {
+  color: gray;
 }
